--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 非想
-subtitle: 非非想
-description:
-author: cc
+title: 非想的随缘小站
+subtitle: 非想非非想
+description: 移动、无线、教育、产品
+author: askio
 language: zh-CN
 timezone:
 
